--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.18.1",
     "node-sass": "^4.11.0",
     "normalize.css": "^7.0.0",
+    "production": "0.0.2",
     "react": "^16.0.0",
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "^12.7.0",
@@ -39,7 +40,9 @@
     "style-loader": "^0.18.2",
     "uuid": "^3.1.0",
     "validator": "^8.0.0",
-    "webpack": "3.1.0",
+    "webpack": "3.1.0"
+  },
+  "devDependencies": {
     "webpack-dev-server": "^2.5.1"
   }
 }
