--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.18.1",
     "node-sass": "^4.11.0",
     "normalize.css": "^7.0.0",
+    "numeral": "^2.0.6",
     "production": "0.0.2",
     "react": "^16.0.0",
     "react-addons-shallow-compare": "^15.6.0",
