--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
+    "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
@@ -29,6 +30,7 @@
     "normalize.css": "^7.0.0",
     "numeral": "^2.0.6",
     "production": "0.0.2",
+    "raf": "^3.3.2",
     "react": "^16.0.0",
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "^12.7.0",
@@ -44,6 +46,11 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
+    "enzyme-to-json": "^3.0.1",
+    "jest": "^20.0.4",
+    "react-test-renderer": "^16.0.0",
     "webpack-dev-server": "^2.5.1"
   }
 }
